--- a/src/classes/RollOut.cls
+++ b/src/classes/RollOut.cls
@@ -5,34 +5,30 @@
 public with sharing class RollOut {
 
     public static void insertQuantity(Map<Id, GrandChild__c> grandChild) {
-        List<Account> accountList = new List<Account>();
-        List<GrandChild__c> updatedChild = [SELECT Id, Contact__r.AccountId FROM GrandChild__c WHERE Id = :grandChild.keySet()];
-        Set<Id> accountIds = new Set<Id>();
-
-        for (GrandChild__c child : updatedChild) {
-            accountIds.add(child.Contact__r.AccountId);
-        }
-        Map<Id, Account> accountMap = new Map<Id, Account>([
-                SELECT Id, Quantity_Child__c
-                FROM Account
-                WHERE Id IN :accountIds
-        ]);
-
-        for (GrandChild__c child : updatedChild) {
-            Account accountId = accountMap.get(child.Contact__r.AccountId);
-            accountId.Quantity_Child__c++;
-            if (!accountList.contains(accountId)) {
-                accountList.add(accountId);
+        Map<Id, Account> accountMap = new Map<Id, Account>();
+        for (GrandChild__c child : grandChild.values()) {
+            if (accountMap.containsKey(child.Contact__r.AccountId)) {
+                Account account = accountMap.get(child.Contact__r.AccountId);
+                if (account.Quantity_Child__c == null) {
+                    account.Quantity_Child__c = 0;
+                }
+                account.Quantity_Child__c++;
             } else {
-                accountList.remove(accountList.size() - 1);
-                accountList.add(accountId);
+                accountMap.put(child.Contact__r.AccountId, new Account(
+                        Id = child.Contact__r.AccountId,
+                        Quantity_Child__c = 1
+                ));
             }
         }
-        update accountList;
+        update accountMap.values();
     }
 
     public static void deleteRecord(Map<Id, GrandChild__c> childMap) {
-        List<GrandChild__c> childToDelete = [SELECT Id, Name, Contact__r.AccountId FROM GrandChild__c WHERE Id = :childMap.keySet()];
+        List<GrandChild__c> childToDelete = [
+                SELECT Id, Name, Contact__r.AccountId
+                FROM GrandChild__c
+                WHERE Id = :childMap.keySet()
+        ];
         List<Account> accountList = new List<Account>();
         Set<Id> accountIds = new Set<Id>();
         for (GrandChild__c child : childToDelete) {
