--- a/src/classes/QueryBuilderTest.cls
+++ b/src/classes/QueryBuilderTest.cls
@@ -1,24 +1,31 @@
 /**
  * Created by YaroslavDehtiar on 27.08.2019.
  */
-@isTest
+@IsTest
 public with sharing class QueryBuilderTest {
 
-    @isTest
+    @IsTest
     public static void checkObjects() {
         QueryBuilder.getObjects();
     }
 
-    @isTest
+    @IsTest
     public static void checkFields() {
         QueryBuilder.getFields('Contact');
     }
 
-    @isTest
+    @IsTest
     public static void checkExecute() {
         List<String> str = new List<String>();
         str.add('Id');
         str.add('Name');
-        QueryBuilder.finalExecute('Account', str);
+        List<String> lStrings = new List<String>();
+        QueryBuilder.finalExecute('Account', str, lStrings);
+    }
+
+    @IsTest
+    public static void checkTypes() {
+        String str = 'Account';
+        QueryBuilder.getAllTypesFromObject(str);
     }
 }
